--- a/exam-online-backend/src/main/resources/application.properties
+++ b/exam-online-backend/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-#testing123
+# Tomcat server configuration
+server.port = 8681
+
+#Configuring database
+# OracleDB connection settings
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=system
+spring.datasource.password=oracle123
+
+
+
+# ORM settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
