--- a/exam-online-backend/src/main/resources/application.properties
+++ b/exam-online-backend/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Tomcat server configuration
-server.port = 8681
+server.port = 8081
 
 #Configuring database
 # OracleDB connection settings
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=system
-spring.datasource.password=oracle123
+spring.datasource.password=mui
 
 
 
