email integration and changes in queries

--- a/exam-online-backend/src/main/resources/application.properties
+++ b/exam-online-backend/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Tomcat server configuration
-server.port = 8081
+server.port = 8989
 
 #Configuring database
 # OracleDB connection settings
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=system
-spring.datasource.password=mui
+spring.datasource.password=NewlifebeginS
 
 
 
@@ -14,3 +14,14 @@ spring.datasource.password=mui
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
+#Email Integration Settings
+spring.mail.properties.mail.smtp.connecttimeout=50000
+spring.mail.properties.mail.smtp.timeout=30000
+spring.mail.properties.mail.smtp.writetimeout=50000
+spring.mail.host=smtp.office365.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smpt.auth=true
