--- a/exam-online-backend/src/main/resources/application.properties
+++ b/exam-online-backend/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Tomcat server configuration
-server.port = 8989
+server.port = 9091
 
 #Configuring database
 # OracleDB connection settings
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=system
-spring.datasource.password=NewlifebeginS
+spring.datasource.password=mui
 
 
 
@@ -21,7 +21,7 @@ spring.mail.properties.mail.smtp.timeout=30000
 spring.mail.properties.mail.smtp.writetimeout=50000
 spring.mail.host=smtp.office365.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=onlineexamlti99@gmail.com
+spring.mail.password=ASNS@Online1111
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smpt.auth=true
