--- a/exam-online-backend/src/main/resources/application.properties
+++ b/exam-online-backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port = 9091
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=system
-spring.datasource.password=mui
+spring.datasource.password=oracle123
 
 
 
